solves problem with imagescaling with cropping

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-  padding: 40px;
+  padding: 20px;
   background-color: lightblue;
   text-align: center;
 }
@@ -13,17 +13,33 @@ header {
   background-color: lightseagreen;
 }
 
-.navigation img {
-  width: 150px;
-  height: 80px;
-  margin: 0px 10px;
+.navigation .crop-height {
+  max-height: 80px;
+  overflow: hidden;
+}
+
+.navigation img.scale {
+  display: block;
+  width: 200px;
+  max-width: 100%;
+  height: auto !important;
+  -ms-interpolation-mode: bicubic;
 }
 
 .display-area {
+  padding: 15px;
+  min-height: 600px;
+  background-color: black;
   text-align: center;
 }
 
+.display-area .display-window img {
+  border: 4px solid white;
+}
+
 ul {
+  height: 80px;
+  margin: 0px;
   list-style: none;
 }
 
